Bug 160149 - CRASH: undoing conditional format
Summary: CRASH: undoing conditional format
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+ Master
Hardware: All All
: high major
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.8.0 target:24.2.3 target:24...
Keywords: bibisected, bisected, regression
: 160265 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-03-11 13:11 UTC by Xisco Faulí
Modified: 2024-03-22 18:47 UTC (History)
3 users (show)

See Also:
Crash report or crash signature: ["static%20double%20%60anonymous%20namespace'::GetPercentile(const%20class%20std::vector%3Cdouble,std::allocator%3Cdouble%3E%20%3E%20&%20const,%20double)"]


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2024-03-11 13:11:42 UTC
Steps to reproduce:
1. Open attachment 188062 [details] from bug 156028
2. Right Click on C1 - Conditional Formatting
3. Click on NO
4. Click Ok
5. Undo

-> Crash

Reproduced in

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 68b73e7a290a340be48c8b9ed4d9f970d9a56204
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2024-03-11 13:12:48 UTC
Regression introduced by:

author	Mike Kaganski <mike.kaganski@collabora.com>	2024-01-15 17:22:35 +0600
committer	Mike Kaganski <mike.kaganski@collabora.com>	2024-01-15 14:07:55 +0100
commit 96493091a80fb01c33ea9153b737fdc554de61f0 (patch)
tree 31e7b6b06ab01ffe81930b2d0ffbadd04e87eab6
parent 784efd860788b1cdbddd363abafe74b463e080f3 (diff)
tdf#140330: do not deduplicate conditional formatting in undo context

Bisected with: bibisect-linux64-24.8
Comment 2 Mike Kaganski 2024-03-17 08:35:43 UTC
https://gerrit.libreoffice.org/c/core/+/164937
Comment 3 Commit Notification 2024-03-17 10:28:42 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c492de66a077f3a2a960209b0b8b278b3901f361

tdf#160149: save and restore the whole set of tab's conditional formats

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2024-03-18 19:18:46 UTC
Verified in

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 21d39b5a8c36203d18c5d67c9d2f2bb8d89a53de
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

@Mike, thanks for fixing this issue!!
Comment 5 Commit Notification 2024-03-18 19:46:02 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/c2979145899db161e2659d69ad2f478123254694

tdf#160149: save and restore the whole set of tab's conditional formats

It will be available in 24.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 ady 2024-03-19 01:02:32 UTC
*** Bug 160265 has been marked as a duplicate of this bug. ***
Comment 7 ady 2024-03-20 08:21:42 UTC Comment hidden (obsolete)
Comment 8 Commit Notification 2024-03-22 18:47:04 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2-2":

https://git.libreoffice.org/core/commit/df684c9d68fb130295c5a667fa6fcb6de3068fd2

tdf#160149: save and restore the whole set of tab's conditional formats

It will be available in 24.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.