tdf#160149: save and restore the whole set of tab's conditional formats

... instead of restoring it only for a range, and then have troubles
deciding how to join the range's formatting with the rest of tab's
formatting.

Change-Id: Ie422893c7847b1473a86c0cd8fc3916144eb24ae
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164937
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit c492de66a077f3a2a960209b0b8b278b3901f361)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164886
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>